--- a/Chess Game/packages.config
+++ b/Chess Game/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ChessLibrary" version="1.0.0" targetFramework="net471" />
   <package id="Enums.NET" version="4.0.1" targetFramework="net471" />
 </packages>
